--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+*,
+:root,
+::after,
+::before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 html,
 body,
 div,
@@ -162,4 +171,16 @@ hr {
 input,
 select {
   vertical-align: middle;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: 'Lato', sans-serif;
 }
